@@ -1,5 +1,8 @@
 sisiya-client-checks (0.6.30.26~ppa1) precise; urgency=low
 
+  * add data entry to sisiya_dmesg.pl client check script
+  * fixed bug #12 (https://github.com/erdalmutlu1/sisiya/issues/12) in the
+    sisiya_dmesg.pl client check script
   * add data entry to sisiya_temperature.pl client check script
   * add data entry to sisiya_baan_edi.pl client check script
   * add data entry to sisiya_baan_jobs_status.pl client check script
